--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="public/base.css" />
+    <link rel="stylesheet" href="/base.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google</title>
   </head>
