--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/base.css" />
+    <link rel="icon" href="./favicon.png" />
+    <link rel="stylesheet" href="./base.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google</title>
-    <script type="module" crossorigin src="/assets/index.a6b191f4.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.b317199c.js">
-    <link rel="stylesheet" href="/assets/index.9c9f80f4.css">
+    <script type="module" crossorigin src="./assets/index.a6b191f4.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.b317199c.js">
+    <link rel="stylesheet" href="./assets/index.9c9f80f4.css">
   </head>
   <body>
     <div id="app"></div>
