--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/base.css" />
+    <link rel="icon" href="dist/favicon.png" />
+    <link rel="stylesheet" href="dist/base.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google</title>
     <script type="module" crossorigin src="/assets/index.a6b191f4.js"></script>
@@ -15,3 +15,4 @@
     
   </body>
 </html>
+http://127.0.0.1:5501/build/static/media/1.9c5c3095.png
